--- a/resources/files/style/default.css
+++ b/resources/files/style/default.css
@@ -15,6 +15,7 @@ html, body {
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
+    position: relative;
 }
 
 h1 {
@@ -65,6 +66,18 @@ h1 {
     text-align: center;
 }
 
+.hidden {
+    display: none;
+}
+
+.fill-white {
+    fill: white;
+}
+
+.fill-black {
+    fill: black;
+}
+
 .navbar {
     position: fixed;
     left: 0;
@@ -103,8 +116,8 @@ h1 {
     color: rgb(220, 220, 220);
     background: rgba(0, 0, 0, 0.15);
     border: 1px solid rgba(0, 0, 0, 0.2);
-    border-top: 1px solid rgba(100, 100, 100, 0.2);
-    border-left: 1px solid rgba(100, 100, 100, 0.2);
+    border-top: 1px solid rgba(240, 240, 240, 0.2);
+    border-left: 1px solid rgba(240, 240, 240, 0.2);
     border-radius: 3px;
     font-size: 1.2em;
     cursor: pointer;
@@ -116,8 +129,8 @@ h1 {
     color: rgb(240, 240, 240);
     background: rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.3);
-    border-top: 1px solid rgba(100, 100, 100, 0.3);
-    border-left: 1px solid rgba(100, 100, 100, 0.3);
+    border-top: 1px solid rgba(240, 240, 240, 0.3);
+    border-left: 1px solid rgba(240, 240, 240, 0.3);
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -229,6 +242,7 @@ h1 {
 #page {
     max-width: 900px;
     margin: auto;
+    margin-top: 20px;
     margin-bottom: 50px;
     padding: 40px;
     background: white;
@@ -239,6 +253,29 @@ h1 {
 
 #content li {
     margin-left: 20px;
+}
+
+#content h1 a,
+#content h2 a,
+#content h3 a,
+#content h4 a,
+#content h5 a,
+#content h6 a {
+    text-decoration: none;
+    color: black;
+}
+
+#content h1:hover a:before,
+#content h2:hover a:before,
+#content h3:hover a:before,
+#content h4:hover a:before,
+#content h5:hover a:before,
+#content h6:hover a:before {
+    content: "# ";
+    display: inline;
+    position: absolute;
+    left: -70px;
+    color: rgba(0, 0, 0, 0.2);
 }
 
 code {
