--- a/resources/templates/default.html
+++ b/resources/templates/default.html
@@ -11,7 +11,7 @@
         
         <link rel="stylesheet" type="text/css" href="{resourceDir}style/default.css" />
         <link rel="stylesheet" type="text/css" href="{resourceDir}style/highlight.css" />
-        <link rel="stylesheet" type="text/css" href="{resourceDir}style/font-awesome/css/font-awesome.css" />
+        <link rel="stylesheet" type="text/css" href="{resourceDir}style/font-awesome/css/font-awesome.min.css" />
     </head>
     <body>
         <div class="navbar" data-module="navbar">
@@ -33,7 +33,12 @@
                     </button>
                     -->
                     <button class="button" data-type="filesToggler">
-                        <i class="fa fa-folder-open-o"></i>
+                        <svg class="fill-white"
+                             xmlns="http://www.w3.org/2000/svg"
+                             width="28"
+                             height="28">
+                            <use xlink:href="#fa-folder-open"></use>
+                        </svg>
                     </button>
                 </div>
                 <div class="links">
@@ -52,7 +57,12 @@
             <div class="content" data-type="overlayContent">
                 
                 <button class="close-button" data-type="closeButton">
-                    <i class="fa fa-close"></i>
+                    <svg class="fill-black"
+                         xmlns="http://www.w3.org/2000/svg"
+                         width="36"
+                         height="36">
+                        <use xlink:href="#fa-close"></use>
+                    </svg>
                 </button>
                 
                 <h2 class="overlay-heading">Documents</h2>
@@ -63,6 +73,23 @@
                     </tbody>
                 </table>
             </div>
+        </div>
+        <div class="hidden">
+            <svg xmlns="http://www.w3.org/2000/svg">
+                
+                <symbol id="fa-file" viewBox="-200 -400 2200 2400">
+                    <path d="M1152 512v-472q22 14 36 28l408 408q14 14 28 36h-472zm-128 32q0 40 28 68t68 28h544v1056q0 40-28 68t-68 28h-1344q-40 0-68-28t-28-68v-1600q0-40 28-68t68-28h800v544z" />
+                </symbol>
+                
+                <symbol id="fa-folder-open" viewBox="-500 -200 2600 2200">
+                    <path d="M1717 931q0-35-53-35h-1088q-40 0-85.5 21.5t-71.5 52.5l-294 363q-18 24-18 40 0 35 53 35h1088q40 0 86-22t71-53l294-363q18-22 18-39zm-1141-163h768v-160q0-40-28-68t-68-28h-576q-40 0-68-28t-28-68v-64q0-40-28-68t-68-28h-320q-40 0-68 28t-28 68v853l256-315q44-53 116-87.5t140-34.5zm1269 163q0 62-46 120l-295 363q-43 53-116 87.5t-140 34.5h-1088q-92 0-158-66t-66-158v-960q0-92 66-158t158-66h320q92 0 158 66t66 158v32h544q92 0 158 66t66 158v160h192q54 0 99 24.5t67 70.5q15 32 15 68z" />
+                </symbol>
+                
+                <symbol id="fa-close" viewBox="-500 -200 2600 2200">
+                    <path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z" />
+                </symbol>
+                
+            </svg>
         </div>
         <script src="{resourceDir}js/index.js"></script>
     </body>
