--- a/resources/files/style/default.css
+++ b/resources/files/style/default.css
@@ -18,6 +18,14 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
+b, strong {
+    font-weight: bold;
+}
+
+i, em {
+    font-style: italic;
+}
+
 h1 {
     font-size: 2.2em;
     margin-bottom: 40px;
@@ -25,19 +33,20 @@ h1 {
 
 h2 {
     font-size: 1.8em;
-    margin-top: 30px;
+    padding-top: 50px;
 }
 
 h3 {
     font-size: 1.6em;
+    padding-top: 30px;
 }
 
 h4 {
     font-size: 1.4em;
 }
 
-h3, h4, h5, h6 {
-    margin-top: 20px;
+h4, h5, h6 {
+    padding-top: 20px;
 }
 
 h2, h3, h4, h5, h6, table, pre, p {
@@ -68,6 +77,10 @@ h1 {
 
 .hidden {
     display: none;
+}
+
+.no-events {
+    pointer-events: none;
 }
 
 .fill-white {
@@ -190,6 +203,7 @@ h1 {
 }
 
 #files .content {
+    position: relative;
     margin: auto;
     margin-top: 65px;
     width: 880px;
@@ -221,7 +235,10 @@ h1 {
 }
 
 .close-button {
-    float: right;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 5000;
     font-size: 1.6em;
     background: none;
     border: none;
@@ -261,6 +278,7 @@ h1 {
 #content h4 a,
 #content h5 a,
 #content h6 a {
+    display: block;
     text-decoration: none;
     color: black;
 }
