--- a/resources/templates/default.html
+++ b/resources/templates/default.html
@@ -47,6 +47,7 @@
                     </a>
                 </div>
             </div>
+            {navigation}
         </div>
         <div id="content">
             <div id="page">
@@ -57,7 +58,7 @@
             <div class="content" data-type="overlayContent">
                 
                 <button class="close-button" data-type="closeButton">
-                    <svg class="fill-black"
+                    <svg class="fill-black no-events"
                          xmlns="http://www.w3.org/2000/svg"
                          width="36"
                          height="36">
