--- a/resources/files/style/default.css
+++ b/resources/files/style/default.css
@@ -349,6 +349,10 @@ h1 {
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
+#content ul, #content ol {
+    margin-bottom: 20px;
+}
+
 #content li {
     margin-left: 20px;
 }
