Make custom themes possible (#4)

--- a/resources/templates/default.html
+++ b/resources/templates/default.html
@@ -11,27 +11,11 @@
         
         <link rel="stylesheet" type="text/css" href="{resourceDir}style/default.css" />
         <link rel="stylesheet" type="text/css" href="{resourceDir}style/highlight.css" />
-        <link rel="stylesheet" type="text/css" href="{resourceDir}style/font-awesome/css/font-awesome.min.css" />
     </head>
     <body>
         <div class="navbar" data-module="navbar">
             <div class="content">
                 <div class="buttons">
-                    <!--
-                    <div class="search-container m--hidden">
-                        <input class="search-query"
-                               type="text"
-                               data-type="query"
-                               placeholder="Search..." />
-                        <i class="search-icon fa fa-search"></i>
-                    </div>
-                    <button class="button d--hidden" data-type="searchToggler">
-                        <i class="fa fa-search"></i>
-                    </button>
-                    <button class="button" data-type="tableOfContentsToggler">
-                        <i class="fa fa-list-alt"></i>
-                    </button>
-                    -->
                     <button class="button" data-type="filesToggler">
                         <svg class="fill-white"
                              xmlns="http://www.w3.org/2000/svg"
@@ -92,6 +76,6 @@
                 
             </svg>
         </div>
-        <script src="{resourceDir}js/index.js"></script>
+        <script src="{resourceDir}index.js"></script>
     </body>
 </html>
